# PPADPLS

./: Latex.hs  Main.hs  PPADPLS.cabal  Parse.hs  Proof.lhs  README.md  Report.hs  all-templates.yaml  preamble.tex
